--- a/html/1dallin.html
+++ b/html/1dallin.html
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country:Calocan, Phillpines</p>
+          <p>Common Thing: We both play music</p>
+          <p>Unique: Dance "Walk In the Moon" Michael Jackson</p>
+          <p>Contact: </p>
         </div>
       </div>
     </main>
