--- a/html/2kelly.html
+++ b/html/2kelly.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Kelly Cabato</h1></div>
+        <div class="name"><h1>Michaellin Cabato (Kelly)</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Batangas, Phillipines</p>
+          <p>Common Thing: He was doing Frontend</p>
+          <p>Unique: Speak 5 languages</p>
+          <p>Contact: michaellin.c28@gmail.com</p>
         </div>
       </div>
     </main>
