--- a/html/5chelsea.html
+++ b/html/5chelsea.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Chelsea Demalata</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Gensan, Phillipines</p>
+          <p>Common Thing: We play music</p>
+          <p>Unique: Met his husband in Tinder</p>
+          <p>Contact: 808850588</p>
         </div>
       </div>
     </main>
