--- a/html/6cayenne.html
+++ b/html/6cayenne.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Cayenne Torre</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Pasig, Phillipines</p>
+          <p>Common Thing: Both likes black glasses</p>
+          <p>Unique: Went skydiving</p>
+          <p>Contact: 8087679998</p>
         </div>
       </div>
     </main>
