--- a/html/7kata.html
+++ b/html/7kata.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Katarina Hawea</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Suva, Fiji</p>
+          <p>Common Thing: We ate rabbit</p>
+          <p>Unique: Firing weapons & Fiji millitary</p>
+          <p>Contact: ----</p>
         </div>
       </div>
     </main>
