--- a/html/8nix.html
+++ b/html/8nix.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Inia Yavala</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Suva, Fiji</p>
+          <p>Common Thing: Play Basketball</p>
+          <p>Unique: Represent Fiji for basketball competition</p>
+          <p>Contact: 8087722190</p>
         </div>
       </div>
     </main>
