--- a/html/10maddox.html
+++ b/html/10maddox.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Maddox Cox</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Nevada, Las Vegas, US</p>
+          <p>Common Thing: Both ate dog</p>
+          <p>Unique: Speaks Tacalog</p>
+          <p>Contact: 7029183724</p>
         </div>
       </div>
     </main>
