--- a/html/12lincoln.html
+++ b/html/12lincoln.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Lincoln Hughes</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country:Washington, US</p>
+          <p>Common Thing: Minoring in Business</p>
+          <p>Unique: Married at 19</p>
+          <p>Contact: 5098220531</p>
         </div>
       </div>
     </main>
