--- a/html/13sarah.html
+++ b/html/13sarah.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Sarah Lancaster</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Riverside, California, US</p>
+          <p>Common Thing: Minoring in Business</p>
+          <p>Unique: Do culture dancing</p>
+          <p>Contact: sarahyannlancaster@gmail.com</p>
         </div>
       </div>
     </main>
