--- a/html/15maddux.html
+++ b/html/15maddux.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Maddux Vilardi</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Kahaluu, Hawaii, US</p>
+          <p>Common Thing: Love Reggae Music</p>
+          <p>Unique: Speaks Italian</p>
+          <p>Contact: 8086991301</p>
         </div>
       </div>
     </main>
