--- a/html/16uakea.html
+++ b/html/16uakea.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Uakea Moleni</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Keauu, Big Island, Hawaii, US</p>
+          <p>Common Thing: Play Ukulele</p>
+          <p>Unique: Of Four Siblings, All Sisters</p>
+          <p>Contact: 8083653927</p>
         </div>
       </div>
     </main>
