--- a/html/18mes.html
+++ b/html/18mes.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Lamese Falealii</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Auckland, New Zealand</p>
+          <p>Common Thing: Play Music</p>
+          <p>Unique: Good at Semapro Gear</p>
+          <p>Contact: 8080360805</p>
         </div>
       </div>
     </main>
