--- a/html/19nate.html
+++ b/html/19nate.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Nathanael Tasi</h1></div>
         <div class="container2">
           <div class="imageprofil"></div>
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p>City & Country: Auckland, New Zealand</p>
+          <p>Common Thing: We both make website</p>
+          <p>Unique: Almost Dunk</p>
+          <p>Contact: 9452203093</p>
         </div>
       </div>
     </main>
