--- a/html/10maddox.html
+++ b/html/10maddox.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Maddox Cox</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Nevada, Las Vegas, US</p>
-          <p>Common Thing: Both ate dog</p>
-          <p>Unique: Speaks Tacalog</p>
-          <p>Contact: 7029183724</p>
+          <p><strong>City & Country</strong>: Nevada, Las Vegas, US</p>
+          <p><strong>Common Thing</strong>: Both ate dog</p>
+          <p><strong>Unique</strong>: Speaks Tacalog</p>
+          <p><strong>Contact</strong>: 7029183724</p>
         </div>
       </div>
     </main>
