--- a/html/12lincoln.html
+++ b/html/12lincoln.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Lincoln Hughes</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:Washington, US</p>
-          <p>Common Thing: Minoring in Business</p>
-          <p>Unique: Married at 19</p>
-          <p>Contact: 5098220531</p>
+          <p><strong>City & Country</strong>: Washington, US</p>
+          <p><strong>Common Thing</strong>: Minoring in Business</p>
+          <p><strong>Unique</strong>: Married at 19</p>
+          <p><strong>Contact</strong>: 5098220531</p>
         </div>
       </div>
     </main>
