--- a/html/13sarah.html
+++ b/html/13sarah.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Sarah Lancaster</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Riverside, California, US</p>
-          <p>Common Thing: Minoring in Business</p>
-          <p>Unique: Do culture dancing</p>
-          <p>Contact: sarahyannlancaster@gmail.com</p>
+          <p><strong>City & Country</strong>: Riverside, California, US</p>
+          <p><strong>Common Thing</strong>: Minoring in Business</p>
+          <p><strong>Unique</strong>: Do culture dancing</p>
+          <p><strong>Contact</strong>: sarahyannlancaster@gmail.com</p>
         </div>
       </div>
     </main>
