--- a/html/14sole.html
+++ b/html/14sole.html
@@ -18,18 +18,18 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Soleil Toki</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>: Bay Area, California, US</p>
+          <p><strong>Common Thing</strong>: We both love extra spicy food</p>
+          <p><strong>Unique</strong>: Dancing 3 shows at PCC</p>
+          <p><strong>Contact</strong>: 6504835320</p>
         </div>
       </div>
     </main>
