--- a/html/15maddux.html
+++ b/html/15maddux.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Maddux Vilardi</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Kahaluu, Hawaii, US</p>
-          <p>Common Thing: Love Reggae Music</p>
-          <p>Unique: Speaks Italian</p>
-          <p>Contact: 8086991301</p>
+          <p><strong>City & Country</strong>: Kahaluu, Hawaii, US</p>
+          <p><strong>Common Thing</strong>: Love Reggae Music</p>
+          <p><strong>Unique</strong>: Speaks Italian</p>
+          <p><strong>Contact</strong>: 8086991301</p>
         </div>
       </div>
     </main>
