--- a/html/16uakea.html
+++ b/html/16uakea.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Uakea Moleni</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Keauu, Big Island, Hawaii, US</p>
-          <p>Common Thing: Play Ukulele</p>
-          <p>Unique: Of Four Siblings, All Sisters</p>
-          <p>Contact: 8083653927</p>
+          <p><strong>City & Country</strong>: Keauu, Big Island, Hawaii, US</p>
+          <p><strong>Common Thing</strong>: Play Ukulele</p>
+          <p><strong>Unique</strong>: Of Four Siblings, All Sisters</p>
+          <p><strong>Contact</strong>: 8083653927</p>
         </div>
       </div>
     </main>
