--- a/html/17aryan.html
+++ b/html/17aryan.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Dallin Bacudo</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/India.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>:</p>
+          <p><strong>Common Thing</strong>:</p>
+          <p><strong>Unique</strong>:</p>
+          <p><strong>Contact</strong>:</p>
         </div>
       </div>
     </main>
