--- a/html/18mes.html
+++ b/html/18mes.html
@@ -20,16 +20,18 @@
       <div class="container">
         <div class="name"><h1>Lamese Falealii</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/NZ.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Auckland, New Zealand</p>
-          <p>Common Thing: Play Music</p>
-          <p>Unique: Good at Semapro Gear</p>
-          <p>Contact: 8080360805</p>
+          <p><strong>City & Country</strong>: Auckland, New Zealand</p>
+          <p>
+            <strong>Common Thing</strong>: We both play music and same genre
+          </p>
+          <p><strong>Unique</strong>: Good at Semapro Gear</p>
+          <p><strong>Contact</strong>: 8080360805</p>
         </div>
       </div>
     </main>
