--- a/html/19nate.html
+++ b/html/19nate.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Nathanael Tasi</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/NZ.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Auckland, New Zealand</p>
-          <p>Common Thing: We both make website</p>
-          <p>Unique: Almost Dunk</p>
-          <p>Contact: 9452203093</p>
+          <p><strong>City & Country</strong>: Auckland, New Zealand</p>
+          <p><strong>Common Thing</strong>: We both make website</p>
+          <p><strong>Unique</strong>: Almost Dunk</p>
+          <p><strong>Contact</strong>: 9452203093</p>
         </div>
       </div>
     </main>
