--- a/html/1dallin.html
+++ b/html/1dallin.html
@@ -20,16 +20,18 @@
       <div class="container">
         <div class="name"><h1>Dallin Bacudo</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
             <img src="../images/Phil.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:Calocan, Phillpines</p>
-          <p>Common Thing: We both play music</p>
-          <p>Unique: Dance "Walk In the Moon" Michael Jackson</p>
-          <p>Contact: </p>
+          <p><strong>City & Country</strong>: Calocan, Phillpines</p>
+          <p><strong>Common Thing</strong>: We both play music</p>
+          <p>
+            <strong>Unique</strong>: Dance "Walk In the Moon" Michael Jackson
+          </p>
+          <p><strong>Contact</strong>: 8083865490</p>
         </div>
       </div>
     </main>
