--- a/html/20mai.html
+++ b/html/20mai.html
@@ -18,18 +18,24 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Tuey Vo (Mai)</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Vietnam.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>: Minh City, Viet Nam</p>
+          <p>
+            <strong>Common Thing</strong>: we both have own website:
+            thehyggeexplorer.xyz
+          </p>
+          <p>
+            <strong>Unique</strong>: I have one YouTube channel: The Hygge
+            Explorer
+          </p>
+          <p><strong>Contact</strong>:</p>
         </div>
       </div>
     </main>
