--- a/html/22chino.html
+++ b/html/22chino.html
@@ -18,18 +18,18 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Chino Ikawa</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Japan.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>: Osaka, Japan</p>
+          <p><strong>Common Thing</strong>: Writing daily notes since 11</p>
+          <p><strong>>Unique</strong>: Watch same Anime</p>
+          <p><strong>Contact</strong>: chino20120826@icloud.com</p>
         </div>
       </div>
     </main>
