--- a/html/23zaya.html
+++ b/html/23zaya.html
@@ -18,18 +18,18 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Zolzaya Enkthur</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Mongolia.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>: Öndörkhaan, Mongolia</p>
+          <p><strong>Common Thing</strong>: We both cook and eat spicy food</p>
+          <p><strong>Unique</strong>: Allergic to the sun</p>
+          <p><strong>Contact</strong>: 8087677082</p>
         </div>
       </div>
     </main>
