--- a/html/2kelly.html
+++ b/html/2kelly.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Michaellin Cabato (Kelly)</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
             <img src="../images/Phil.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Batangas, Phillipines</p>
-          <p>Common Thing: He was doing Frontend</p>
-          <p>Unique: Speak 5 languages</p>
-          <p>Contact: michaellin.c28@gmail.com</p>
+          <p><strong>City & Country</strong>: Batangas, Phillipines</p>
+          <p><strong>Common Thing</strong>: He was doing Frontend</p>
+          <p><strong>Unique</strong>: Speak 5 languages</p>
+          <p><strong>Contact</strong>: michaellin.c28@gmail.com</p>
         </div>
       </div>
     </main>
