--- a/html/3ken.html
+++ b/html/3ken.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Kenneth Centeno</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
             <img src="../images/Phil.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Gensan, Phillipines</p>
-          <p>Common Thing: Watch Anime Naruto</p>
-          <p>Unique: Can carry 75Kg</p>
-          <p>Contact: 8088105188</p>
+          <p><strong>City & Country</strong>: Gensan, Phillipines</p>
+          <p><strong>Common Thing</strong>: Watch Anime Naruto</p>
+          <p><strong>Unique</strong>: Can carry 75Kg</p>
+          <p><strong>Contact</strong>: 8088105188</p>
         </div>
       </div>
     </main>
