--- a/html/5chelsea.html
+++ b/html/5chelsea.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Chelsea Demalata</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
             <img src="../images/Phil.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Gensan, Phillipines</p>
-          <p>Common Thing: We play music</p>
-          <p>Unique: Met his husband in Tinder</p>
-          <p>Contact: 808850588</p>
+          <p><strong>City & Country</strong>: Gensan, Phillipines</p>
+          <p><strong>Common Thing</strong>: We both play Ukulele</p>
+          <p><strong>Unique</strong>: Met his husband in Tinder</p>
+          <p><strong>Contact</strong>: 808850588</p>
         </div>
       </div>
     </main>
