--- a/html/6cayenne.html
+++ b/html/6cayenne.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Cayenne Torre</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
             <img src="../images/Phil.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Pasig, Phillipines</p>
-          <p>Common Thing: Both likes black glasses</p>
-          <p>Unique: Went skydiving</p>
-          <p>Contact: 8087679998</p>
+          <p><strong>City & Country</strong>: Pasig, Phillipines</p>
+          <p><strong>Common Thing</strong>: Both likes black glasses</p>
+          <p><strong>Unique</strong>: Went skydiving in freshman year @BYUH</p>
+          <p><strong>Contact</strong>: 8087679998</p>
         </div>
       </div>
     </main>
