--- a/html/7kata.html
+++ b/html/7kata.html
@@ -20,16 +20,16 @@
       <div class="container">
         <div class="name"><h1>Katarina Hawea</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Fiji.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Suva, Fiji</p>
-          <p>Common Thing: We ate rabbit</p>
-          <p>Unique: Firing weapons & Fiji millitary</p>
-          <p>Contact: ----</p>
+          <p><strong>City & Country</strong>: Suva, Fiji</p>
+          <p><strong>Common Thing</strong>: We ate rabbit</p>
+          <p><strong>Unique</strong>: Firing weapons & Fiji millitary</p>
+          <p><strong>Contact</strong>: adikotakatarina090@gmail.com</p>
         </div>
       </div>
     </main>
