--- a/html/8nix.html
+++ b/html/8nix.html
@@ -20,16 +20,18 @@
       <div class="container">
         <div class="name"><h1>Inia Yavala</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Fiji.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country: Suva, Fiji</p>
-          <p>Common Thing: Play Basketball</p>
-          <p>Unique: Represent Fiji for basketball competition</p>
-          <p>Contact: 8087722190</p>
+          <p><strong>City & Country</strong>: Suva, Fiji</p>
+          <p><strong>Common Thing</strong>: Play Basketball</p>
+          <p>
+            <strong>Unique</strong>: Represent Fiji for basketball competition
+          </p>
+          <p><strong>Contact</strong>: 8087722190</p>
         </div>
       </div>
     </main>
