--- a/html/9justin.html
+++ b/html/9justin.html
@@ -18,18 +18,18 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Justin Kumar</h1></div>
         <div class="container2">
-          <div class="imageprofil"></div>
+          <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Phil.png" alt="" />
+            <img src="../images/Fiji.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p>City & Country:</p>
-          <p>Common Thing:</p>
-          <p>Unique:</p>
-          <p>Contact:</p>
+          <p><strong>City & Country</strong>: Suva, Fiji</p>
+          <p><strong>Common Thing</strong>: We love spicy food</p>
+          <p><strong>Unique</strong>: Speak 3 languages</p>
+          <p><strong>Contact</strong>: 8088100459</p>
         </div>
       </div>
     </main>
