--- a/index.html
+++ b/index.html
@@ -18,64 +18,61 @@
         <p>
           A website project for NETWORKING 101. My great teacher PJ Rogers’ BUSM
           180 class at BYU–Hawaii, Spring 2025. I met each classmate face to
-          face to get to know them better. Here, I share their names, where
-          they’re from, something we have in common, and one unique thing about
-          them. - Rama
         </p>
       </div>
     </header>
     <main>
       <div class="content">
-        <div class="image"><img src="images/worldmap.gif" alt="" /></div>
+        <div class="image"><img src="images/1.png" alt="" /></div>
         <div class="people">
           <div class="title"><h2>My Network:</h2></div>
           <div class="container">
             <div class="people1">
               <h3>Philipines:</h3>
-              <p>1. Dallin Bacudo</p>
-              <p>2. Michaellin Cabato</p>
-              <p>3. Keneth Centeno</p>
-              <p>4. Ryan Clave</p>
-              <p>5. Chelsea Demalata</p>
-              <p>6. Cayenne Torre</p>
+              <a href="html/1dallin.html"><p>1. Dallin Bacudo</p></a>
+              <a href="html/2kelly.html"><p>2. Michaellin Cabato</p></a>
+              <a href="html/3ken.html"><p>3. Keneth Centeno</p></a>
+              <a href="html/4ryan.html"><p>4. Ryan Clave</p></a>
+              <a href="html/5chelsea.html"><p>5. Chelsea Demalata</p></a>
+              <a href="html/6cayenne.html"><p>6. Cayenne Torre</p></a>
               <br />
               <h3>Fiji</h3>
-              <p>7. Katarina Adikota</p>
-              <p>8. Inia Yavala</p>
-              <p>9. Justin Kumar</p>
+              <a href="html/7kata.html"><p>7. Katarina Adikota</p></a>
+              <a href="html/8nix.html"><p>8. Inia Yavala</p></a>
+              <a href="html/9justin.html"><p>9. Justin Kumar</p></a>
               <br />
               <h3>US</h3>
-              <p>10. Maddox Cox</p>
-              <p>11. Zackry Gushawa</p>
-              <p>12. Lincoln Hughes</p>
-              <p>13. Sarah Lancaster</p>
-              <p>14. Soleil Toki</p>
-              <p>15. Maddux Vilardi</p>
-              <p>16. Uakea Moleni</p>
+              <a href="html/10maddox.html"><p>10. Maddox Cox</p></a>
+              <a href="html/11zach.html"><p>11. Zackry Gushawa</p></a>
+              <a href="html/12lincoln.html"><p>12. Lincoln Hughes</p></a>
+              <a href="html/13sarah.html"><p>13. Sarah Lancaster</p></a>
+              <a href="html/14sole.html"><p>14. Soleil Toki</p></a>
+              <a href="html/15maddux.html"><p>15. Maddux Vilardi</p></a>
+              <a href="html/16uakea.html"><p>16. Uakea Moleni</p></a>
               <br />
               <h3>India</h3>
-              <p>17. Aryan Rajput</p>
+              <a href="html/17aryan.html"><p>17. Aryan Rajput</p></a>
             </div>
             <div class="people2">
               <h3>New Zealand</h3>
-              <p>18. Lamese Falealii (Mes)</p>
-              <p>19. Nathanael Tasi (Nate)</p>
+              <a href="html/18mes.html"><p>18. Lamese Falealii</p></a>
+              <a href="html/19nate.html"><p>19. Nathanael Tasi</p></a>
               <br />
               <h3>Vietnam</h3>
-              <p>20. Tuyet Vo</p>
+              <a href="html/20mai.html"><p>20. Tuyet Vo</p></a>
               <br />
               <h3>South Korea</h3>
-              <p>21. Euiryeong Oh (Daisy)</p>
+              <a href="html/21daisy.html"><p>21. Euiryeong Oh</p></a>
               <br />
               <h3>Japan</h3>
-              <p>22. Chino Ikawa</p>
+              <a href="html/22chino.html"><p>22. Chino Ikawa</p></a>
               <br />
               <h3>Mongolia</h3>
-              <p>23. Zolzaya Enkthur</p>
+              <a href="html/23zaya.html"><p>23. Zolzaya Enkthur</p></a>
 
               <br />
               <h3>Taiwan</h3>
-              <p>24. Sheng Zhu</p>
+              <a href="html/24sheng.html"><p>24. Sheng Zhu</p></a>
             </div>
           </div>
         </div>
