--- a/html/11zach.html
+++ b/html/11zach.html
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p><strong>City & Country</strong>:</p>
-          <p><strong>Common Thing</strong>:</p>
-          <p><strong>Unique</strong>:</p>
-          <p><strong>Contact</strong>:</p>
+          <p><strong>City & Country</strong>: Nevada, Las Vegas, US</p>
+          <p><strong>Common Thing</strong>: We both love programming</p>
+          <p><strong>Unique</strong>: Cook Italian Food</p>
+          <p><strong>Contact</strong>: 7029714457</p>
         </div>
       </div>
     </main>
