--- a/html/17aryan.html
+++ b/html/17aryan.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Dallin Bacudo</h1></div>
+        <div class="name"><h1>Aryan Rajput</h1></div>
         <div class="container2">
           <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
@@ -26,10 +26,10 @@
           </div>
         </div>
         <div class="data">
-          <p><strong>City & Country</strong>:</p>
-          <p><strong>Common Thing</strong>:</p>
-          <p><strong>Unique</strong>:</p>
-          <p><strong>Contact</strong>:</p>
+          <p><strong>City & Country</strong>: Delhi, India</p>
+          <p><strong>Common Thing</strong>: We both doing GYM</p>
+          <p><strong>Unique</strong>: Speak 4 languages</p>
+          <p><strong>Contact</strong>: 8082019369</p>
         </div>
       </div>
     </main>
