--- a/html/21daisy.html
+++ b/html/21daisy.html
@@ -29,7 +29,7 @@
           <p><strong>City & Country</strong>: Incheon, South Korea</p>
           <p><strong>Common Thing</strong>: We love same genra K-Pop</p>
           <p><strong>Unique</strong>: She changed major to Supply Change</p>
-          <p><strong>Contact</strong>:</p>
+          <p><strong>Contact</strong>: 8082195935</p>
         </div>
       </div>
     </main>
