--- a/html/25pj.html
+++ b/html/25pj.html
@@ -18,18 +18,16 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Chino Ikawa</h1></div>
+        <div class="name"><h1>PJ Roger</h1></div>
         <div class="container2">
           <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
-            <img src="../images/Japan.png" alt="" />
+            <img src="../images/US.png" alt="" />
           </div>
         </div>
         <div class="data">
-          <p><strong>City & Country</strong>: Osaka, Japan</p>
-          <p><strong>Common Thing</strong>: Writing daily notes since 11</p>
-          <p><strong>Unique</strong>: Watch same Anime</p>
-          <p><strong>Contact</strong>: chino20120826@icloud.com</p>
+          <p><strong>City & Country</strong>: Mackinney, Texas, US</p>
+          <p><strong>Unique</strong>: Best Business Professor Ever in BYUH</p>
         </div>
       </div>
     </main>
