--- a/html/4ryan.html
+++ b/html/4ryan.html
@@ -26,10 +26,13 @@
           </div>
         </div>
         <div class="data">
-          <p><strong>City & Country</strong>:</p>
+          <p><strong>City & Country</strong>: Camarines Sur, Phillipines</p>
           <p><strong>Common Thing</strong>: We both have served as AP</p>
-          <p><strong>Unique</strong>:</p>
-          <p><strong>Contact</strong>:</p>
+          <p>
+            <strong>Unique</strong>: Top notch in class from preschool to 4th
+            grade
+          </p>
+          <p><strong>Contact</strong>: 8088577791</p>
         </div>
       </div>
     </main>
