--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
         <h1>Networking 101</h1>
         <h2>BUSM 180 / SPRING 25' - PJ Roger</h2>
         <p>
-          A website project for NETWORKING 101. My great teacher PJ Rogers’ BUSM
-          180 class at BYU–Hawaii, Spring 2025. I met each classmate face to
+          A website project for NETWORKING 101. Why it's unique? I coded it by
+          myself. Got <strong>24</strong> or all people in the classrom. Each
+          Red Circle represent all my network's from.<br />
+          <strong
+            >GUIDE: Please click each name to show their information.</strong
+          >
+          Mahalo - Rama Putra.
         </p>
       </div>
     </header>
@@ -30,7 +35,7 @@
             <div class="people1">
               <h3>Philipines:</h3>
               <a href="html/1dallin.html"><p>1. Dallin Bacudo</p></a>
-              <a href="html/2kelly.html"><p>2. Michaellin Cabato</p></a>
+              <a href="html/2kelly.html"><p>2. Michaellin</p></a>
               <a href="html/3ken.html"><p>3. Keneth Centeno</p></a>
               <a href="html/4ryan.html"><p>4. Ryan Clave</p></a>
               <a href="html/5chelsea.html"><p>5. Chelsea Demalata</p></a>
@@ -73,6 +78,10 @@
               <br />
               <h3>Taiwan</h3>
               <a href="html/24sheng.html"><p>24. Sheng Zhu</p></a>
+              <br />
+              <h3>Best People Behind:</h3>
+              <a href="html/25pj.html"><p>25. PJ Roger</p></a>
+              <a href="html/26an.html"><p>26. An Vu</p></a>
             </div>
           </div>
         </div>
