--- a/html/24sheng.html
+++ b/html/24sheng.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <div class="container">
-        <div class="name"><h1>Sheng Ming</h1></div>
+        <div class="name"><h1>Sheng Ming Zu</h1></div>
         <div class="container2">
           <!-- <div class="imageprofil"></div> -->
           <div class="imagemap">
@@ -26,10 +26,15 @@
           </div>
         </div>
         <div class="data">
-          <p><strong>City & Country</strong>:</p>
-          <p><strong>Common Thing</strong>:</p>
-          <p><strong>Unique</strong>:</p>
-          <p><strong>Contact</strong>:</p>
+          <p><strong>City & Country</strong>: Taoyuan, Taiwan</p>
+          <p>
+            <strong>Common Thing</strong>: Both love programming and Algorithm
+          </p>
+          <p>
+            <strong>Unique</strong>: Participate in International Guitar
+            Competition
+          </p>
+          <p><strong>Contact</strong>: 8085179235</p>
         </div>
       </div>
     </main>
